clusters/on-prem/manifests/09-cnpg/02-pgadmin4/04-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: harbor
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pgadmin4
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4-ingress
  namespace: harbor
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  
  tls:
  - hosts:
    - pgadmin.home.daniel-enrique.com
    secretName: wildcard-home-tls  # Make sure this exists in harbor namespace
  rules:
  - host: pgadmin.home.daniel-enrique.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin4
            port:
              number: 80
